--- a/src/index.html
+++ b/src/index.html
@@ -47,127 +47,8 @@
       </header>
 
       <div class="results">
-        <ul class="results__list">
-          <li>
-            <a class="results__link results__link--active" href="#23456">
-              <figure class="results__fig">
-                <img src="img/test-1.jpg" alt="Test" />
-              </figure>
-              <div class="results__data">
-                <h4 class="results__name">Pasta with Tomato ...</h4>
-                <p class="results__author">The Pioneer Woman</p>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a class="results__link" href="#76767">
-              <figure class="results__fig">
-                <img src="img/test-2.jpg" alt="Test" />
-              </figure>
-              <div class="results__data">
-                <h4 class="results__name">Pasta Salad with ...</h4>
-                <p class="results__author">Spicy Perspective</p>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a class="results__link" href="#85354">
-              <figure class="results__fig">
-                <img src="img/test-3.jpg" alt="Test" />
-              </figure>
-              <div class="results__data">
-                <h4 class="results__name">Homemade Tomato ...</h4>
-                <p class="results__author">All Recipes</p>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a class="results__link" href="#43563">
-              <figure class="results__fig">
-                <img src="img/test-4.jpg" alt="Test" />
-              </figure>
-              <div class="results__data">
-                <h4 class="results__name">Pasta with Tomato ...</h4>
-                <p class="results__author">The Pioneer Woman</p>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a class="results__link" href="#2256665">
-              <figure class="results__fig">
-                <img src="img/test-5.jpg" alt="Test" />
-              </figure>
-              <div class="results__data">
-                <h4 class="results__name">Greek Pasta with ...</h4>
-                <p class="results__author">Chow</p>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a class="results__link" href="#7567567">
-              <figure class="results__fig">
-                <img src="img/test-9.jpg" alt="Test" />
-              </figure>
-              <div class="results__data">
-                <h4 class="results__name">Cherry tomato, kale ...</h4>
-                <p class="results__author">BBC Good Food</p>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a class="results__link" href="#5676577">
-              <figure class="results__fig">
-                <img src="img/test-7.jpg" alt="Test" />
-              </figure>
-              <div class="results__data">
-                <h4 class="results__name">Pasta with Fresh ...</h4>
-                <p class="results__author">Chow</p>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a class="results__link" href="#98798">
-              <figure class="results__fig">
-                <img src="img/test-8.jpg" alt="Test" />
-              </figure>
-              <div class="results__data">
-                <h4 class="results__name">Buttery Tomato Pasta ...</h4>
-                <p class="results__author">Simply Recipes</p>
-              </div>
-            </a>
-          </li>
-          <li>
-            <a class="results__link" href="#5464646456">
-              <figure class="results__fig">
-                <img src="img/test-10.jpg" alt="Test" />
-              </figure>
-              <div class="results__data">
-                <h4 class="results__name">Pesto Pasta Salad ...</h4>
-                <p class="results__author">Eats Well With Others</p>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a class="results__link" href="#345345435">
-              <figure class="results__fig">
-                <img src="img/test-6.jpg" alt="Test" />
-              </figure>
-              <div class="results__data">
-                <h4 class="results__name">Pasta with Roasted ...</h4>
-                <p class="results__author">Two Peas and Their Pod</p>
-              </div>
-            </a>
-          </li>
-        </ul>
-
+        <ul class="results__list"></ul>
+        <!--
         <div class="results__pages">
           <button class="btn-inline results__btn--prev">
             <svg class="search__icon">
@@ -181,11 +62,11 @@
               <use href="img/sprite.svg#icon-triangle-right"></use>
             </svg>
           </button>
-        </div>
+        </div> -->
       </div>
 
       <div class="recipe">
-        <figure class="recipe__fig">
+        <!-- <figure class="recipe__fig">
           <img src="img/test-1.jpg" alt="Tomato" class="recipe__img" />
           <h1 class="recipe__title">
             <span>Pasta with tomato cream sauce</span>
@@ -320,13 +201,13 @@
               <use href="img/sprite.svg#icon-triangle-right"></use>
             </svg>
           </a>
-        </div>
+        </div> -->
       </div>
 
       <div class="shopping">
         <h2 class="heading-2">My Shopping List</h2>
 
-        <ul class="shopping__list">
+        <!-- <ul class="shopping__list">
           <li class="shopping__item">
             <div class="shopping__count">
               <input type="number" value="500" step="100" />
@@ -406,7 +287,7 @@
             </button>
           </li>
         </ul>
-
+ -->
         <div class="copyright">
           &copy; by Jonas Schmedtmann. Powered by
           <a href="http://food2fork.com" target="_blank" class="link">Food2Fork.com</a>.
