--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
           <!-- Shopping List view will render content here -->
         </ul>
         <div class="copyright">
-          &copy; by Jonas Schmedtmann. Powered by
+          Powered by
           <a href="http://food2fork.com" target="_blank" class="link">Food2Fork.com</a>.
         </div>
       </div>
